done user crud succesfully
