# api/main.go
@@ -14,14 +14,19 @@ func NewServer(h *handler.Handler) *gin.Engine {
 	r := gin.Default()
 	//Users
 
-	r.POST("/login", h.Login)
-	r.POST("/signup", h.SignUp)
-
 	r.POST("/user", h.CreateUser)
 	r.GET("/user/:id", h.GetUser)
 	r.GET("/user", h.GetAllUser)
 	r.PUT("/user/:id", h.UpdateUser)
 	r.DELETE("/user/:id", h.DeleteUser)
+	//Posts
+	r.POST("/post", h.CreatePost)
+	r.GET("/post/:id", h.GetPost)
+	r.GET("/post", h.GetAllPost)
+	r.PUT("/post/:id", h.UpdatePost)
+	r.DELETE("/post/:id", h.DeletePost)
+	// r.DELETE("/my/posts", h.getmypost)
+
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 	return r
