# models/user.go
@@ -1,20 +1,18 @@
 package models
 
 type CreateUser struct {
-	Name     string `json:"name"`
-	Phone    string `json:"phone"`
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
 
 type User struct {
 	ID        string `json:"id"`
-	Name      string `json:"name"`
-	Phone     string `json:"phone"`
 	Username  string `json:"username"`
 	Password  string `json:"password"`
+	IsActive  bool   `json:"isactive"`
 	CreatedAt string `json:"created_at"`
 	UpdatedAt string `json:"updated_at"`
+	DeletedAt string `json:"deleted_at"`
 }
 
 type IdRequest struct {
@@ -22,6 +20,7 @@ type IdRequest struct {
 }
 
 type LoginRequest struct {
+	ID       string `json:"id"`
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
@@ -32,7 +31,7 @@ type SignUp struct {
 }
 
 type LoginRespond struct {
-	Phone    string `json:"phone"`
+	ID       string `json:"id"`
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
@@ -40,12 +39,20 @@ type LoginRes struct {
 	Token string `json:"token"`
 }
 type GetAllUserRequest struct {
-	Page  int    `json:"page"`
-	Limit int    `json:"limit"`
-	Name  string `json:"name"`
+	Page     int    `json:"page"`
+	Limit    int    `json:"limit"`
+	UserName string `json:"username"`
 }
 
 type GetAllUser struct {
 	Users []User `json:"user"`
 	Count int    `json:"count"`
+}
+type ChangePassword struct {
+	OldPassword string `json:"oldpassword"`
+	NewPassword string `json:"newpassword"`
+}
+type ReqNewPassword struct {
+	Id       string `json:"id"`
+	Password string `json:"password"`
 }
